# glimmer

./: Cargo.toml  README.md
config/: local.yaml
src/: config.rs  lib.rs  main.rs  redis_entry.rs  services.rs
src/routes/: get_locations.rs  mod.rs  send_location.rs  utils.rs
src/routes/location/: get.rs  mod.rs  post.rs
src/routes/locations/: get.rs  mod.rs
static/: 404.html  index.html
static/js/: map.js
static/styles/: index.css
tests/api/: main.rs  sending_location.rs
tests/redis/: generate_locations.rs  main.rs
