[package]
name = "glimmer"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
reqwest = { version = "0.11", features = ["json"] }
config = { version = "0.13", default-features = false, features = ["yaml"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10"
log = "0.4"
anyhow = "1"
async-stream = "0.3"
futures = "0.3"
rand = "0.8"
public-ip = "0.2"
mobc-redis = "0.8"

[dev-dependencies]
image = "0.24"
rust_decimal = "1.30"